css/styles.css
* {
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  margin: 0;
  height: 100%;
  font-family: "Poppins", sans-serif;
}

#container {
  display: flex;
  height: 100%;
}


#start {
  font-size: 20px;
  width: 50%;
  padding: 100px;
}

#start input {
  margin: 0.5em;
  padding: 0.5em;
  font-size: 20px;
  width: 300px;
  border: 0;
  border-bottom: 1px solid grey;
  font-family: "Poppins", sans-serif;
}

#start input:focus {
  border-bottom: 1px solid #FC3427;
}

.ui-menu .ui-menu-item-wrapper {
  margin: 0;
  padding: 1em;
}

#resources {
  display: flex;
  height: 100%;
  padding: 100px;
  background-color: #F5F5F3;
}

.resource {
  width: 250px;
  height: 250px;
  margin: 2em;
  padding: 2em;
  background-color: #fff;
  border-radius: 7px;
  box-shadow: 0 2px 4px rgba(0,0,0,.2);
}

.title {
  margin: 0;
  font-size: 1.5em;
  line-height: 1;
}

.title a {
  color: #FC3427;
  text-decoration: none;
}

.creator {
  line-height: 1;
}

.tag {
  font-size: 0.7em;
  text-transform: uppercase;
  display: inline-block;
  margin: 0 1em 1em 0;
  border-radius: 2px;
  padding: 0.5em 1em;
  background-color: #4DADF7;
  color: #D8F2F9;
}

.footer {
  background-color: black;
  width: 100vw;
  text-align: center;
  color: white
}

